# strict-num-extended

./: .release-please-manifest.json  CHANGELOG.md  Cargo.toml  README.md  clippy.toml  codecov.yml  deny.toml  release-please-config.json  release-plz.toml  renovate.json
.github/: dependabot.yml
.github/workflows/: cargo-deny.yml  cleanup-merged-pr-branch.yml  codecov.yml  dependabot-auto-merge.yml  publish.yml  release-please.yml  release-plz.yml  rust.yml
macros/: CHANGELOG.md  Cargo.toml  README.md
macros/src/: arithmetic.rs  comparison.rs  config.rs  constants.rs  constraint.rs  conversion.rs  convert.rs  doc_generator.rs  finite_float.rs  finite_float_trait.rs  float_conversion.rs  fromstr_impl.rs  generator.rs  helpers.rs  lib.rs  option_arithmetic.rs  parse_trait.rs  result_arithmetic.rs  traits.rs  type_aliases.rs  types.rs  unary_ops.rs
macros/src/arithmetic/: binary_ops.rs  neg_ops.rs
macros/src/config/: config_arithmetic.rs  config_types.rs
macros/src/generator/: iterators.rs  type_utils.rs  validation.rs
main/: CHANGELOG.md  Cargo.toml
main/src/: lib.rs
main/tests/: arithmetic_operations.rs  constants.rs  constrained_float.rs  conversion_traits.rs  error_validation_comprehensive.rs  finite_float.rs  float_conversion.rs  fromstr_tests.rs  neg_operations.rs  new_const.rs  pibounded.rs  primitive_arithmetic.rs  result_arithmetic.rs  serde_comprehensive_tests.rs  serde_tests.rs  symmetric_tests.rs  trig_ops.rs  unary_ops.rs
src/: lib.rs
tests/: new_const.rs
