[package]
name = "strict-num-extended"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
strict-num-extended-macros = { workspace = true }

[lints]
workspace = true

[workspace]
members = ["macros"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
# Internal dependencies
strict-num-extended-macros = { path = "macros" }

# External dependencies
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[workspace.lints.rust]
missing_docs = "warn"
unused_crate_dependencies = "allow"
unused_extern_crates = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
private_doc_tests = "warn"
invalid_html_tags = "warn"
bare_urls = "warn"

[workspace.lints.clippy]
# Restriction
as_conversions = "allow"
cognitive_complexity = "allow"
decimal_literal_representation = "warn"
empty_drop = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
expect_used = "allow"
float_cmp_const = "warn"
if_then_some_else_none = "warn"
indexing_slicing = "warn"
lossy_float_literal = "warn"
missing_docs_in_private_items = "allow"
mod_module_files = "warn"
module_name_repetitions = "allow"
mutex_atomic = "warn"
panic = "allow"
panic_in_result_fn = "warn"
print_stderr = "warn"
print_stdout = "warn"
rc_buffer = "warn"
rest_pat_in_fully_bound_structs = "warn"
self_named_module_files = "allow"
separated_literal_suffix = "warn"
shadow_unrelated = "warn"
string_add = "warn"
string_slice = "warn"
todo = "warn"
unimplemented = "warn"
unneeded_field_pattern = "allow"
unreachable = "warn"
unseparated_literal_suffix = "allow"
unwrap_used = "warn"
verbose_file_reads = "warn"
wildcard_enum_match_arm = "allow"

# Pedantic (Applicability: MachineApplicable)
borrow_as_ptr = "warn"
cast_lossless = "allow"
doc_markdown = "warn"
explicit_deref_methods = "warn"
implicit_clone = "warn"
match_bool = "warn"
must_use_candidate = "warn"
needless_bitwise_bool = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
single_char_pattern = "warn"
wildcard_imports = "warn"

# Pedantic (Applicability: MaybeIncorrect)
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "warn"
cast_ptr_alignment = "warn"
cast_sign_loss = "warn"
comparison_chain = "warn"
copy_iterator = "warn"
float_cmp = "warn"
format_push_string = "warn"
large_futures = "warn"
macro_use_imports = "warn"
manual_let_else = "allow"
match_same_arms = "warn"
match_wild_err_arm = "warn"
missing_errors_doc = "warn"
return_self_not_must_use = "warn"
similar_names = "allow"
str_split_at_newline = "warn"
string_add_assign = "warn"
struct_excessive_bools = "warn"
struct_field_names = "warn"
too_many_lines = "allow"
trivially_copy_pass_by_ref = "warn"
unnecessary_box_returns = "warn"
unreadable_literal = "warn"
unused_async = "warn"
unused_self = "allow"
used_underscore_binding = "allow"
verbose_bit_mask = "warn"
zero_sized_map_values = "warn"

# Style (Applicability: MachineApplicable)
collapsible_if = "warn"
iter_next_slice = "warn"
iter_nth_zero = "warn"
manual_map = "warn"
must_use_unit = "warn"
needless_borrow = "warn"
needless_borrows_for_generic_args = "warn"
partialeq_to_none = "warn"
redundant_closure = "warn"
string_extend_chars = "warn"
unnecessary_fold = "warn"
unnecessary_lazy_evaluations = "warn"
unused_unit = "warn"

# Style (Applicability: MaybeIncorrect)
collapsible_match = "warn"
double_must_use = "warn"
fn_to_numeric_cast = "warn"
fn_to_numeric_cast_with_truncation = "warn"
inconsistent_digit_grouping = "warn"
module_inception = "warn"
needless_range_loop = "warn"
should_implement_trait = "warn"

# Complexity (Applicability: MachineApplicable)
bind_instead_of_map = "warn"
char_lit_as_u8 = "warn"
clone_on_copy = "warn"
double_comparisons = "warn"
extra_unused_type_parameters = "warn"
filter_map_identity = "warn"
int_plus_one = "warn"
iter_count = "warn"
manual_filter = "warn"
manual_filter_map = "warn"
manual_find = "warn"
manual_flatten = "warn"
manual_strip = "warn"
map_identity = "warn"
match_single_binding = "warn"
needless_borrowed_reference = "warn"
needless_match = "warn"
redundant_closure_call = "warn"
search_is_some = "warn"
string_from_utf8_as_bytes = "warn"
unnecessary_cast = "warn"
unnecessary_operation = "warn"

# Complexity (Applicability: MaybeIncorrect)
borrowed_box = "warn"
extra_unused_lifetimes = "warn"
no_effect = "warn"
too_many_arguments = "warn"
type_complexity = "warn"
unnecessary_unwrap = "warn"
vec_box = "warn"
zero_divided_by_zero = "warn"

# Perf (Applicability: MachineApplicable)
missing_const_for_thread_local = "warn"
unnecessary_to_owned = "warn"

# Perf (Applicability: MaybeIncorrect)
box_collection = "warn"
manual_memcpy = "warn"
manual_try_fold = "warn"
redundant_allocation = "warn"
vec_init_then_push = "warn"

# Correctness (Applicability: MaybeIncorrect)
async_yields_async = "warn"
if_let_mutex = "warn"
panicking_overflow_checks = "warn"
redundant_comparisons = "warn"
vec_resize_to_zero = "warn"

# Suspicious (Applicability: MaybeIncorrect)
await_holding_lock = "warn"
float_equality_without_abs = "warn"
incompatible_msrv = "warn"
octal_escapes = "warn"

# Nursery (Applicability: MachineApplicable)
missing_const_for_fn = "warn"
needless_collect = "warn"
redundant_clone = "warn"
redundant_pub_crate = "warn"
string_lit_as_bytes = "warn"
unused_rounding = "warn"

# Nursery (Applicability: MaybeIncorrect)
future_not_send = "warn"
iter_with_drain = "warn"
option_if_let_else = "warn"
or_fun_call = "warn"
significant_drop_in_scrutinee = "warn"

# Cargo (Applicability: MaybeIncorrect)
multiple_crate_versions = "allow"
negative_feature_names = "warn"
redundant_feature_names = "warn"
wildcard_dependencies = "deny"
