[workspace]
members = ["macros", "main"]
resolver = "3"

[workspace.package]
version = "0.5.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.85"

# Crates.io Publish Config
description = "Type-safe finite floating-point types for Rust - eliminate NaN and infinity at compile time"
repository = "https://github.com/MiyakoMeow/strict-num-extended"
keywords = ["float", "finite", "type-safe", "math", "validation"]
categories = ["mathematics", "data-structures"]
readme = "README.md"

[workspace.dependencies]
# Internal dependencies
strict-num-extended-macros = { path = "macros", version = "0.5.0" }

# External dependencies
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

# External optional dependencies
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1" }

[workspace.lints.rust]
missing_docs = "warn"
unused_crate_dependencies = "allow"
unused_extern_crates = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
private_doc_tests = "warn"
invalid_html_tags = "warn"
bare_urls = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

# Pedantic (Applicability: MachineApplicable)
cast_lossless = "allow"
enum_glob_use = "allow"
wildcard_imports = "allow"

# Pedantic (Applicability: MaybeIncorrect)
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
unreadable_literal = "allow"

# Pedantic (Applicability: HasPlaceholders)
manual_let_else = "allow"

# Pedantic (Applicability: Unspecified)
module_name_repetitions = "allow"
similar_names = "allow"
too_many_lines = "allow"
unused_self = "allow"
used_underscore_binding = "allow"

# Restriction (Applicability: MachineApplicable)
if_then_some_else_none = "warn"
lossy_float_literal = "warn"
rest_pat_in_fully_bound_structs = "warn"
separated_literal_suffix = "allow"
unseparated_literal_suffix = "allow"

# Restriction (Applicability: MaybeIncorrect)
decimal_literal_representation = "warn"
empty_drop = "warn"
mutex_atomic = "warn"
wildcard_enum_match_arm = "allow"

# Restriction (Applicability: HasPlaceholders)
float_cmp_const = "warn"

# Restriction (Applicability: Unspecified)
as_conversions = "allow"
cognitive_complexity = "allow"
empty_structs_with_brackets = "warn"
exit = "warn"
expect_used = "allow"
indexing_slicing = "warn"
missing_docs_in_private_items = "allow"
mod_module_files = "warn"
panic = "allow"
panic_in_result_fn = "warn"
print_stderr = "allow"
print_stdout = "allow"
rc_buffer = "warn"
self_named_module_files = "allow"
shadow_unrelated = "warn"
string_add = "warn"
string_slice = "allow"
todo = "warn"
unimplemented = "warn"
unneeded_field_pattern = "allow"
unreachable = "warn"
unwrap_used = "warn"
verbose_file_reads = "warn"

# Nursery (Applicability: MachineApplicable)
missing_const_for_fn = "warn"
needless_collect = "warn"
redundant_clone = "warn"
redundant_pub_crate = "warn"
search_is_some = "warn"
string_lit_as_bytes = "warn"
unused_rounding = "warn"

# Nursery (Applicability: MaybeIncorrect)
iter_with_drain = "warn"
option_if_let_else = "warn"
significant_drop_in_scrutinee = "warn"

# Nursery (Applicability: HasPlaceholders)
or_fun_call = "warn"

# Nursery (Applicability: Unspecified)
future_not_send = "warn"

# Cargo (Applicability: Unspecified)
multiple_crate_versions = "allow"
negative_feature_names = "warn"
redundant_feature_names = "warn"
wildcard_dependencies = "deny"
