[package]
name = "strict-num-extended"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
strict-num-extended-macros = { workspace = true }

[lints]
workspace = true
