[package]
name = "strict-num-extended"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[features]
default = ["std"]
std = ["strict-num-extended-macros/std", "serde/std"]
serde = ["dep:serde", "strict-num-extended-macros/serde"]

[dependencies]
strict-num-extended-macros = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
